--- a/boilerplate/less/_variable.less
+++ b/boilerplate/less/_variable.less
@@ -1,17 +1,21 @@
 // LESS Variables
 
-@background: #fff; // Background color
-@bg-light: #f5f5f5; // Background color
+@background: #182E62; // Background color
+@bg-light: #3360CC; // Background color
 
-@text: #454545; // Base text color
-@text-light: #999; // Light text color
+@text: #FFFFFF; // Base text color
+@text-light: #EEEEEE; // Light text color
 @text-header: #333; // h1~h6 text color
 
-@link: #1487bd; // Link text color
-@hover: #0f5373; // Link text color(hover)
-@visited: #789dae; // Link text color(hover)
+@link: #F2F2FF; // Link text color
+@hover: #D0D0FF; // Link text color(hover)
+@visited: #F0F0FF; // Link text color(hover)
 
-@border: #ddd; // Border color
+@border: #3360CC; // Border color
+
+@box-shadow-to: #6c88cc;
 
 @btn: #fff; // button background
 @btn-hover: #f5f5f5; // button hover backgroud
+
+@code-bg-color: #0F192A;
