--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -26,7 +26,7 @@
 
 html,
 body {
-    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic', sans-serif;
+    font-family: "Lucida Grande", YuGothic, '游ゴシック', "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", 'Helvetica Neue', Meiryo, "メイリオ", sans-serif;
     color: @text;
     background-color: @background;
 }
