--- a/boilerplate/less/_variable.less
+++ b/boilerplate/less/_variable.less
@@ -5,7 +5,7 @@
 
 @text: #FFFFFF; // Base text color
 @text-light: #EEEEEE; // Light text color
-@text-header: #333; // h1~h6 text color
+@text-header: #FFFFFF; // h1~h6 text color
 
 @link: #F2F2FF; // Link text color
 @hover: #D0D0FF; // Link text color(hover)
