add shadow for archive-entry

--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -672,6 +672,9 @@ a.keyword {
 
         .archive-entry {
             margin-bottom: 3em;
+            border: 1px solid @border;
+            box-shadow:0px 0px 6px 1px @box-shadow-to;
+            padding: 0 5px;
         }
 
         .entry-title {
