change monospace font

--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -384,7 +384,7 @@ a.keyword {
         white-space: pre;
         border: 0;
         background: transparent;
-        font-family: 'Monaco', 'Consolas', 'Courier New', Courier, monospace, sans-serif;
+        font-family: @monospace-font;
     }
 
     code {
@@ -392,9 +392,9 @@ a.keyword {
         margin: 0 2px;
         padding: 0 5px;
         border: 1px solid #eaeaea;
-        background-color: #f8f8f8;
+        background-color: @code-bg-color;
         border-radius: 3px;
-        font-family: 'Monaco', 'Consolas', 'Courier New', Courier, monospace, sans-serif;
+        font-family: @monospace-font;
     }
 
     hr {
