--- a/boilerplate/less/_variable.less
+++ b/boilerplate/less/_variable.less
@@ -19,3 +19,5 @@
 @btn-hover: #f5f5f5; // button hover backgroud
 
 @code-bg-color: #0F192A;
+
+@monospace-font: "Consolas", 'Monaco', "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
