change char encode to UTF-8 with BOM

--- a/boilerplate/less/_media-queries.less
+++ b/boilerplate/less/_media-queries.less
@@ -1,4 +1,4 @@
-/* Media Queries - Retina Display */
+﻿/* Media Queries - Retina Display */
 
 @media (-webkit-min-device-pixel-ratio: 2) {
     .hatena-module-search-box .search-module-button {
