add background image

--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -26,6 +26,9 @@
 
 html,
 body {
+    background-image: url(https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.2/boilerplate/img/MIYA160131430534.png);
+    background-repeat: no-repeat;
+    background-size: contain;
     font-family: "Lucida Grande", YuGothic, '游ゴシック', "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", 'Helvetica Neue', Meiryo, "メイリオ", sans-serif;
     color: @text;
     background-color: @background;
@@ -129,6 +132,7 @@ a.keyword {
 #main {
     width: 700px;
     float: left;
+    background-color: fade(@background, 40%);
 }
 
 #box2 {
