--- a/boilerplate/less/_media-queries.less
+++ b/boilerplate/less/_media-queries.less
@@ -10,7 +10,9 @@
 /* Media Queries - Tablet */
 
 @media (min-width: 768px) and (max-width: 1024px) {
-
+    body {
+        background-image: url(https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.2/boilerplate/img/MIYA160131430534-1024.png);
+    }
     #container {
         width: 724px;
     }
@@ -84,5 +86,7 @@
 /* Media Queries - Smartphone */
 
 @media (max-width: 480px) {
-
+    body {
+        background-image: url(https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.2/boilerplate/img/MIYA160131430534-768.png);
+    }
 }
