update image ref
use less variable

--- a/boilerplate/less/_variable.less
+++ b/boilerplate/less/_variable.less
@@ -21,3 +21,5 @@
 @code-bg-color: #0F192A;
 
 @monospace-font: "Consolas", 'Monaco', "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+
+@cdn-image-path: "https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.4/boilerplate/img";
