--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -26,7 +26,7 @@
 
 html,
 body {
-    background-image: url(https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.2/boilerplate/img/MIYA160131430534.png);
+    background-image: url("@{cdn-image-path}/MIYA160131430534.png");
     background-repeat: no-repeat;
     background-size: contain;
     font-family: "Lucida Grande", YuGothic, '游ゴシック', "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", 'Helvetica Neue', Meiryo, "メイリオ", sans-serif;
