--- a/boilerplate/less/_media-queries.less
+++ b/boilerplate/less/_media-queries.less
@@ -11,7 +11,7 @@
 
 @media (min-width: 768px) and (max-width: 1024px) {
     body {
-        background-image: url(https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.2/boilerplate/img/MIYA160131430534-1024.png);
+        background-image: url("@{cdn-image-path}/MIYA160131430534-1024.png");
     }
     #container {
         width: 724px;
@@ -46,6 +46,10 @@
 /* Media Queries - Small Tablet & Smartphone */
 
 @media (max-width: 767px) {
+
+    body {
+        background-image: url("@{cdn-image-path}/MIYA160131430534-768.png");
+    }
 
     #globalheader-container {
         position: static;
@@ -88,6 +92,6 @@
 
 @media (max-width: 480px) {
     body {
-        background-image: url(https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.2/boilerplate/img/MIYA160131430534-768.png);
+        background-image: url("@{cdn-image-path}/MIYA160131430534-480.png");
     }
 }
