fix background-image position
follow padding of #container

--- a/boilerplate/less/_media-queries.less
+++ b/boilerplate/less/_media-queries.less
@@ -1,4 +1,5 @@
-﻿/* Media Queries - Retina Display */
+﻿@import "_variable.less";
+/* Media Queries - Retina Display */
 
 @media (-webkit-min-device-pixel-ratio: 2) {
     .hatena-module-search-box .search-module-button {
