--- a/boilerplate/less/_variable.less
+++ b/boilerplate/less/_variable.less
@@ -22,4 +22,6 @@
 
 @monospace-font: "Consolas", 'Monaco', "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
 
+@globalheader-container-height: 37px;
+
 @cdn-image-path: "https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.4/boilerplate/img";
