--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -29,6 +29,7 @@ body {
     background-image: url("@{cdn-image-path}/MIYA160131430534.png");
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: 0 @globalheader-container-height;
     font-family: "Lucida Grande", YuGothic, '游ゴシック', "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", 'Helvetica Neue', Meiryo, "メイリオ", sans-serif;
     color: @text;
     background-color: @background;
@@ -116,7 +117,7 @@ a.keyword {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
-    padding-top: 37px; // グローバルヘッダを fixed にしているため
+    padding-top: @globalheader-container-height; // グローバルヘッダを fixed にしているため
 
     #content {
         .clearfix;
