--- a/boilerplate/less/_media-queries.less
+++ b/boilerplate/less/_media-queries.less
@@ -26,6 +26,12 @@
         width: 245px;
     }
 
+    .entry-content {
+        pre {
+            padding: 15px 5px;
+        }
+    }
+
 /* 1カラムにしたい場合は下記のコメントアウトを外してください ----
     #main,
     #box2 {
@@ -87,6 +93,12 @@
         left: 0px;
     }
 
+    .entry-content {
+        pre {
+            padding: 10px 3px;
+        }
+    }
+
 }
 
 /* Media Queries - Smartphone */
@@ -95,4 +107,11 @@
     body {
         background-image: url("@{cdn-image-path}/MIYA160131430534-480.png");
     }
+
+    .entry-content {
+        pre {
+            padding: 5px 3px;
+        }
+    }
+
 }
