--- a/boilerplate/less/_variable.less
+++ b/boilerplate/less/_variable.less
@@ -1,27 +1,29 @@
 ﻿// LESS Variables
 
-@background: #182E62; // Background color
-@bg-light: #3360CC; // Background color
+@background: #182e62; // Background color
+@bg-light: #3360cc; // Background color
 
-@text: #FFFFFF; // Base text color
-@text-light: #EEEEEE; // Light text color
-@text-header: #FFFFFF; // h1~h6 text color
+@text: #ffffff; // Base text color
+@text-light: #eeeeee; // Light text color
+@text-header: #ffffff; // h1~h6 text color
 
-@link: #F2F2FF; // Link text color
-@hover: #D0D0FF; // Link text color(hover)
-@visited: #F0F0FF; // Link text color(hover)
+@link: #f2f2ff; // Link text color
+@hover: #d0d0ff; // Link text color(hover)
+@visited: #f0f0ff; // Link text color(hover)
 
-@border: #3360CC; // Border color
+@border: #3360cc; // Border color
 
 @box-shadow-to: #6c88cc;
 
-@btn: #fff; // button background
+@btn: #ffffff; // button background
 @btn-hover: #f5f5f5; // button hover backgroud
 
-@code-bg-color: #0F192A;
+@code-bg-color: #0f192a;
 
-@monospace-font: "Consolas", 'Monaco', "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+@monospace-font: 'Consolas', 'Monaco', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
 
 @globalheader-container-height: 37px;
 
-@cdn-image-path: "https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/1.0.4/boilerplate/img";
+@repo-tag: '1.0.4';
+
+@cdn-image-path: 'https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/@{repo-tag}/boilerplate/img';
