--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -1,4 +1,4 @@
-﻿@charset "utf-8";
+﻿@charset 'utf-8';
 /*
   Theme: boilerplate
   Author: Hatena Blog Team
@@ -14,47 +14,54 @@
 */
 
 /*  import normalize */
-@import (less) "3rdparty/normalize.css/normalize.css";
+@import (less) '3rdparty/normalize.css/normalize.css';
 
 /*  import mixin */
-@import "less/_mixin.less";
+@import 'less/_mixin.less';
 
 /*  import variable */
-@import "less/_variable.less";
+@import 'less/_variable.less';
 
 /* Common */
 
 html,
 body {
-    background-image: url("@{cdn-image-path}/MIYA160131430534.png");
+    background-image: url('@{cdn-image-path}/MIYA160131430534.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 0 @globalheader-container-height;
-    font-family: "Lucida Grande", YuGothic, '游ゴシック', "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", 'Helvetica Neue', Meiryo, "メイリオ", sans-serif;
+    font-family: 'Lucida Grande', YuGothic, '游ゴシック', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'Helvetica Neue', Meiryo, 'メイリオ', sans-serif; // lesshint maxCharPerLine: false
     color: @text;
     background-color: @background;
 }
 
 a {
     color: @link;
+
     &:hover {
         color: @hover;
     }
+
     &:visited {
         color: @visited;
     }
+
 }
 
 
 h1,h2,h3,h4,h5,h6 {
+
     text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
+
     a,a:hover,a:visited {
         color: @text-header;
         text-decoration: none;
     }
+
 }
 
-a.keyword {
+
+a.keyword { // lesshint qualifyingElement: false
     text-decoration: none;
     border-bottom: 1px dotted @border;
     color: @text;
@@ -74,19 +81,20 @@ a.keyword {
     .border-radius(2px);
     cursor: pointer;
     font-size: 12px;
-    text-decoration: none;
     font-weight: bold;
-    border: 1px solid rgba(0,0,0,.2);
-    text-decoration: none !important;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    text-decoration: none !important; // lesshint importantRule: false
+
     &:hover {
       background-color: @btn-hover;
-      text-decoration: none !important;
+      text-decoration: none !important; // lesshint importantRule: false
     }
+
 }
 
 .btn-small {
-    padding: 2px 10px !important;
-    font-size: 11px !important;
+    padding: 2px 10px !important; // lesshint importantRule: false
+    font-size: 11px !important; // lesshint importantRule: false
 }
 
 .btn-large {
@@ -102,7 +110,7 @@ a.keyword {
 */
 
 #globalheader-container {
-    color: #fff;
+    color: #ffffff;
     position: fixed;
     top: 0;
     left: 0;
@@ -180,6 +188,7 @@ a.keyword {
 
 #title {
     margin: 0;
+
     a {
         color: @text;
     }
@@ -197,6 +206,7 @@ a.keyword {
     #title {
         padding-top: 70px;
     }
+
     #title,
     #blog-description {
         padding-left: 20px;
@@ -223,7 +233,7 @@ a.keyword {
     position: relative;
     margin-bottom: 100px;
     border: 1px solid @border;
-    box-shadow:0px 0px 6px 1px @box-shadow-to;
+    box-shadow: 0 0 6px 1px @box-shadow-to;
     padding: 0 5px;
 }
 
@@ -232,9 +242,10 @@ a.keyword {
     margin-bottom: 20px;
     border-bottom: 1px solid @border;
     position: relative;
+
     .entry-header-menu {
         a, a:hover {
-            color: #000;
+            color: #000000;
         }
     }
 }
@@ -244,6 +255,7 @@ a.keyword {
     margin: 0;
     line-height: 1.3;
     font-size: 160%;
+
     a.entry-title-link {
         color: @text-header;
         text-decoration: none;
@@ -268,9 +280,11 @@ a.keyword {
 .categories {
     margin-top: 10px;
     font-size: 80%;
+
     a {
         color: @text-light;
     }
+
     &.no-categories {
         margin: 0;  // カテゴリー無いとき
     }
@@ -279,10 +293,11 @@ a.keyword {
 /* 「編集する」ボタン */
 .entry-header-menu {
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     left: -60px;
+
     a, a:hover {
-        color: #000;
+        color: #000000;
         .btn;
     }
 }
@@ -310,7 +325,7 @@ a.keyword {
 
     h1, h2, h3, h4 {
         background-color: @bg-light;
-        box-shadow:0px 0px 6px 1px @box-shadow-to inset;
+        box-shadow: 0 0 6px 1px @box-shadow-to inset;
         padding: 4px 6px;
     }
 
@@ -355,7 +370,7 @@ a.keyword {
 
     table th,
     table td {
-        border: 1px solid #ddd;
+        border: 1px solid #dddddd;
         padding: 5px 10px;
     }
 
@@ -368,6 +383,7 @@ a.keyword {
         border: 1px solid @border;
         margin: 0 0 10px;
         padding: 20px;
+
         p {
             margin-top: 0;
             margin-bottom: 0;
@@ -421,6 +437,7 @@ a.keyword {
 .entry-footer-section {
     font-size: 80%;
     color: @text-light;
+
     a {
         color: @text-light;
     }
@@ -448,6 +465,7 @@ a.keyword {
         padding: 10px 0 10px 60px;
         border-bottom: 1px solid @border;
         position: relative;
+
         &:first-child {
             border-top: 1px solid @border;
         }
@@ -461,13 +479,13 @@ a.keyword {
         position: absolute;
         top: 10px;
         left: 0;
-        width: 50px !important;
-        height: 50px !important;
+        width: 50px !important; // lesshint importantRule: false
+        height: 50px !important; // lesshint importantRule: false
         .border-radius(3px);
     }
 
     .leave-comment-title, .leave-comment-title:hover {
-        color: #000;
+        color: #000000;
     }
 }
 
@@ -490,13 +508,14 @@ a.keyword {
     font-size: 80%;
     color: @text-light;
     margin: 0;
+
     a {
         color: @text-light;
     }
 }
 
 .leave-comment-title, .leave-comment-title:hover {
-    color: #000;
+    color: #000000;
     .btn;
 }
 
@@ -515,9 +534,11 @@ a.keyword {
     font-weight: bold;
     margin-bottom: 15px;
     font-size: 120%;
+
     a {
         color: @text;
         text-decoration: none;
+
         &:hover {
             text-decoration: underline;
         }
@@ -543,7 +564,8 @@ a.keyword {
 
     .profile-description {
         font-size: 90%;
-        p{
+
+        p {
             margin-top: 0;
         }
     }
@@ -588,7 +610,7 @@ a.keyword {
         padding: 5px;
         color: @text;
         background: none;
-        border: none;
+        border: 0;
         outline: none;
         height: 20px;
         width: 90%;
@@ -597,18 +619,20 @@ a.keyword {
     .search-module-button {
         width: 20px;
         height: 20px;
-        background: transparent url(http://blog.hatena.ne.jp/images/theme/search.png) no-repeat right center;
-        border: none;
+        background: transparent url('http://blog.hatena.ne.jp/images/theme/search.png') no-repeat right center;
+        border: 0;
         outline: none;
         text-indent: -9999px;
         position: absolute;
         top: 5px;
         right: 5px;
         opacity: 0.5;
+
         &:hover {
             opacity: 0.85;
         }
     }
+
 }
 
 /* Pager */
@@ -676,17 +700,17 @@ a.keyword {
         .archive-entry {
             margin-bottom: 3em;
             border: 1px solid @border;
-            box-shadow:0px 0px 6px 1px @box-shadow-to;
+            box-shadow: 0 0 6px 1px @box-shadow-to;
             padding: 0 5px;
         }
 
         .entry-title {
             font-size: 130%;
-            margin: 0 0 .5em;
+            margin: 0 0 0.5em;
         }
 
         .categories {
-            margin: 0 0 .5em;
+            margin: 0 0 0.5em;
         }
 
         .entry-description {
@@ -698,9 +722,9 @@ a.keyword {
     }
 
     .categories a {
-        color: #fff;
+        color: #ffffff;
         font-size: 70%;
-        background: #aaa;
+        background: #aaaaaa;
         padding: 3px 5px;
         border-radius: 3px;
         text-decoration: none;
@@ -713,4 +737,4 @@ a.keyword {
 
 
 /*  import media queries */
-@import "less/_media-queries.less";
+@import 'less/_media-queries.less';
