--- a/boilerplate/less/_mixin.less
+++ b/boilerplate/less/_mixin.less
@@ -1,31 +1,33 @@
-.clearfix {
+﻿.clearfix {
     display: block;
     *zoom: 1;
-  	&:after {
+
+    &:after {
         display: block;
         visibility: hidden;
         font-size: 0;
         height: 0;
         clear: both;
-        content: ".";
-  	}
+        content: '.';
+    }
+
 }
 
 .inline-block {
     display: inline-block;
-    *display: inline;
+    *display: inline;// lesshint duplicateProperty: false
     *zoom: 1;
 }
 
-.box-shadow (@x: 0, @y: 0, @blur: 25px, @color: rgba(0,0,0,.20)) {
+.box-shadow (@x: 0, @y: 0, @blur: 25px, @color: rgba(0, 0, 0, 0.20)) {
     box-shadow: @x @y @blur @color;
 }
 
-.box-shadow-inset (@x: 0, @y: 0, @blur: 25px, @color: rgba(0,0,0,.20)) {
+.box-shadow-inset (@x: 0, @y: 0, @blur: 25px, @color: rgba(0, 0, 0, 0.20)) {
     box-shadow: inset @x @y @blur @color;
 }
 
-.text-shadow (@x: 0, @y: 0, @blur: 5px, @color: rgba(0,0,0,.20)) {
+.text-shadow (@x: 0, @y: 0, @blur: 5px, @color: rgba(0, 0, 0, 0.20)) {
     text-shadow: @x @y @blur @color;
 }
 
@@ -42,7 +44,7 @@
     background-clip: padding-box;
 }
 
-.gradient(@color: #F5F5F5, @start: #FFFFFF, @stop: #EEEEEE) {
+.gradient(@color: #f5f5f5, @start: #ffffff, @stop: #eeeeee) {
     background: @color;
     background: -webkit-gradient(linear, left top, left bottom, from(@start), to(@stop));
     background: -ms-linear-gradient(top, @start, @stop);
@@ -63,12 +65,12 @@
     transition-duration: @duration;
 }
 
-.rotation(@deg:5deg){
+.rotation(@deg:5deg) {
     transform: rotate(@deg);
 }
 
-.scale(@ratio:1.5){
-    transform:scale(@ratio);
+.scale(@ratio:1.5) {
+    transform: scale(@ratio);
 }
 
 .translate(@x:0, @y:0) {
