--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -1,7 +1,8 @@
 ﻿@charset 'utf-8';
+/*! Hatena Blog Theme by yumetodo v1.0.4 | MIT License | https://github.com/yumetodo/Hatena-Blog-Themes */
 /*
   Theme: boilerplate
-  Author: Hatena Blog Team
+  Author: yumetodo and Hatena Blog Team
   Description:
     はてなブログのデザインCSSカスタマイズの土台に適したデザインテーマです。
     このテーマをもとにしてCSSを書くと比較的楽にカスタマイズできます。
