re-set header background-color

--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -112,6 +112,7 @@ a.keyword { // lesshint qualifyingElement: false
     top: 0;
     left: 0;
     width: 100%;
+    background-color: fade(@background, 60%);
 }
 
 /* container */
