chore: bump version

--- a/boilerplate/less/_variable.less
+++ b/boilerplate/less/_variable.less
@@ -24,6 +24,6 @@
 
 @globalheader-container-height: 37px;
 
-@repo-tag: '1.0.5';
+@repo-tag: 'v1.0.6';
 
 @cdn-image-path: 'https://cdn.rawgit.com/yumetodo/Hatena-Blog-Themes/@{repo-tag}/boilerplate/img';
