--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -27,7 +27,7 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 0 @globalheader-container-height;
-    font-family: 'Lucida Grande', "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'Helvetica Neue', Meiryo, 'メイリオ', sans-serif; // lesshint maxCharPerLine: false
+    font-family: 'Lucida Grande', 'Yu Gothic', '游ゴシック', YuGothic, '游ゴシック体', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'Helvetica Neue', Meiryo, 'メイリオ', sans-serif; // lesshint maxCharPerLine: false
     color: @text;
     background-color: @background;
 }
